--- a/src/app/components/admin.1/shipments/shipments.html
+++ b/src/app/components/admin.1/shipments/shipments.html
@@ -80,7 +80,7 @@
                 <i class="fas fa-times-circle"></i>
             </div>
             <div class="stat-content">
-                <h3 class="stat-title">Cancelados</h3>
+                <h3 class="stat-title">Devueltos</h3>
                 <p class="stat-value">{{ cancelledCount }}</p>
             </div>
         </div>
